--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/p5": "0.9.1",
     "p5": "1.1.9",
+    "typescript": "4.7.3",
     "typescript-collections": "1.3.3"
   },
   "devDependencies": {
